--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,5 +11,6 @@
     <h1>Main Page</h1>
     <a href="/members/join">회원가입</a>
     <a href="/members">회원목록</a>
+    <a href="/login"></a>
 </body>
 </html>
