--- a/src/main/resources/templates/members/join.html
+++ b/src/main/resources/templates/members/join.html
@@ -1,7 +1,9 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
-<body>
-<div class="container">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="layout/default_layout">
+
+<div class="container" layout:fragment="content">
     <div>회원가입</div>
     <form action="/members/join" method="post">
         <div class="form-group">
@@ -15,5 +17,5 @@
         <button type="submit">등록</button>
     </form>
 </div> <!-- /container -->
-</body>
+
 </html>
