--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,16 +1,14 @@
 <!doctype html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HelloPage</title>
-</head>
-<body>
-    <h1>Main Page</h1>
-    <a href="/members/join">회원가입</a>
-    <a href="/members">회원목록</a>
-    <a href="/login"></a>
-</body>
+<html lang="ko"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="layout/default_layout">
+
+    <div layout:fragment="content">
+        <h1>Main Page</h1>
+        <a href="/members/join">회원가입</a>
+        <a href="/members">회원목록</a>
+        <a href="/login"></a>
+    </div>
+
 </html>
